force-app/main/default/objects/KimbleOne__AnnuityTemplate__c/KimbleOne__AnnuityTemplate__c.object-meta.xml
<CustomObject>
    <label>Annuity Template</label>
    <nameField>
        <label>Annuity Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Annuity Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>