force-app/main/default/objects/KimbleOne__AnnuityTemplate__c/fields/KimbleOne__CostRateFactor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostRateFactor__c</fullName>
    <label>Cost Rate Factor</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>