force-app/main/default/objects/KimbleOne__AnnuityTemplate__c/fields/KimbleOne__CostRateRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostRateRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cost Rate Rule</label>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>AnnuityTemplates</relationshipLabel>
    <relationshipName>AnnuityTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>