force-app/main/default/objects/KimbleOne__AnnuityTemplate__c/fields/KimbleOne__NumberOfPeriods__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NumberOfPeriods__c</fullName>
    <label>Number Of Periods</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>