force-app/main/default/objects/KimbleOne__AnnuityTemplate__c/fields/KimbleOne__PeriodUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PeriodUnitType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Period Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>AnnuityTemplates (Period Unit Type)</relationshipLabel>
    <relationshipName>AnnuityTemplatesPeriodUnitType</relationshipName>
    <type>Lookup</type>
</CustomField>