force-app/main/default/objects/KimbleOne__AnnuityTemplate__c/fields/KimbleOne__Product__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Product__c</fullName>
    <label>Product</label>
    <referenceTo>KimbleOne__Product__c</referenceTo>
    <relationshipLabel>Annuity Templates</relationshipLabel>
    <relationshipName>AnnuityTemplates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>